--- a/swri_transform_util/package.xml
+++ b/swri_transform_util/package.xml
@@ -1,23 +1,17 @@
 <package format="2">
   <name>swri_transform_util</name>
-  <version>2.9.0</version>
-  <description>
-
-     The swri_transform_util package contains utility functions and classes for
-     transforming between coordinate frames.
-
-  </description>
+  <version>2.2.0</version>
+  <description>     The swri_transform_util package contains utility functions and classes for     transforming between coordinate frames.  </description>
   <author>Marc Alban</author>
   <maintainer email="malban@swri.org">Marc Alban</maintainer>
   <license>BSD</license>
   <url>https://github.com/swri-robotics/marti_common</url>
-
   <buildtool_depend>catkin</buildtool_depend>
   <buildtool_depend>pkg-config</buildtool_depend>
-
   <depend>boost</depend>
   <depend>cv_bridge</depend>
   <depend>diagnostic_msgs</depend>
+  <depend>dynamic_reconfigure</depend>
   <depend>geographic_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>gps_common</depend>
@@ -33,14 +27,12 @@
   <depend>tf</depend>
   <depend>topic_tools</depend>
   <depend>yaml-cpp</depend>
-
+  <depend>novatel_gps_msgs</depend>
+  <depend>novatel_gps_driver</depend>
   <exec_depend>sensor_msgs</exec_depend>
-
   <test_depend>rostest</test_depend>
-
   <export>
     <nodelet plugin="${prefix}/nodelet_plugins.xml" />
     <rosdoc config="rosdoc.yaml" />
   </export>
 </package>
-
